--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "slick-carousel": "^1.6.0",
     "ScrollMagic": "~2.0.5",
-    "js-cookie": "^2.1.3"
+    "js-cookie": "^2.1.3",
+    "waypoints": "^4.0.1"
   }
 }
